# MSDM-SLAM

./: .gitignore  README.md
Grid_map_ROS/: CMakeLists.txt  README.md  grid_map.cpp  package.xml
Grid_map_ROS/launch/: youbot_be2r.launch
Grid_map_ROS/src/: grid_map.cpp
cartographer_ros/cartographer_ros/configuration_files/: demo_2d.rviz  youbot_localization.lua  youbot_odometric.lua
cartographer_ros/cartographer_ros/launch/: offline_youbot.launch  (+5 more)
depth_estimation_ros/: CMakeLists.txt  README.md  midas_cpp  package.xml
depth_estimation_ros/launch/: midas_cpp_features.launch  midas_cpp_features_seg.launch  midas_cpp_seg.launch  midas_cpp_xyzonly.launch  midas_cpp_xyzrgb.launch  pcl.launch  pcl_xyzonly.launch
depth_estimation_ros/rviz/: features.rviz  orb_slam3_depth.rviz  orb_slam3_depth_seg.rviz  seg.rviz
depth_estimation_ros/scripts/: scale_features.py  scale_gt.py  scale_gt_nobridge.py  segmentation.py
depth_estimation_ros/src/: main.cpp
vslam/: .clang-format  .rosinstall  .rosinstall.bak  CMakeLists.txt  Dockerfile  README.md  build_lib.sh  package.xml  run_image.bash
vslam/ORB_SLAM3/: CMakeLists.txt  run_open_loris.sh  tum_rgbd.sh
vslam/ORB_SLAM3/Examples/Monocular/: OpenLoris_D435i.yaml  Sber_zed2_factory_v2.yaml  Sber_zed2_factory_v2_1.yaml  T265.yaml  TUM1.yaml  TUM2.yaml  TUM3.yaml  TUM_512.yaml  Zed2_640.yaml  Zed2_640_raw.yaml  mono_euroc.cc  mono_kitti.cc  mono_openloris.cc  mono_openloris_t265.cc  mono_sber_d455.cc  mono_sber_zed2.cc  mono_tum.cc  mono_tum_vi.cc  see3cam.yaml
vslam/ORB_SLAM3/Examples/Monocular-Inertial/: OpenLoris-corridor2-4.yaml  OpenLoris.yaml  Sber_zed2.yaml  Sber_zed2_factory.yaml  mono_inertial_d435i.cc  mono_inertial_d455.cc  mono_inertial_euroc.cc  mono_inertial_openloris.cc  mono_inertial_sber_zed2.cc  mono_inertial_tum_vi.cc
vslam/ORB_SLAM3/Examples/RGB-D/: rgbd_openloris.cc  rgbd_sber_zed2.cc  rgbd_tum.cc
vslam/ORB_SLAM3/Examples/Stereo/: stereo_sber_d455.cc  stereo_sber_t265.cc  stereo_sber_zed2.cc  stereo_t265.cc
vslam/ORB_SLAM3/Examples/Stereo-Inertial/: D455.txt  Zed2.yaml  stereo_inertial_d455.cc  stereo_inertial_openloris.cc  stereo_inertial_t265.cc  stereo_inertial_zed2.cc
vslam/ORB_SLAM3/cmake/: FindDBoW2.cmake  Findg2o.cmake
vslam/ORB_SLAM3/include/: Converter.h  Frame.h  G2oTypes.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  MapDrawer.h  ORBVocabulary.h  OptimizableTypes.h  Optimizer.h  PnPsolver.h  System.h  Tracking.h
vslam/ORB_SLAM3/src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
vslam/ORB_SLAM3_ROS/cmake/: FindDBoW2.cmake  Findg2o.cmake
vslam/ORB_SLAM3_ROS/include/: node.h
vslam/ORB_SLAM3_ROS/include/utils/: Utils.h
vslam/ORB_SLAM3_ROS/launch/: description.launch.xml  euro_si.launch  move_base.launch  our_youbot.launch  rs_d455.launch  youbot_navigation.launch  youbot_remote.launch  zed2.launch
vslam/ORB_SLAM3_ROS/params/: GridMap.pgm  base_local_planner_params.yaml  costmap_common_params_burger.yaml  costmap_common_params_waffle.yaml  costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle.yaml  local_costmap_params.yaml  map.yaml  move_base_params.yaml
vslam/ORB_SLAM3_ROS/params/Monocular/: Sber_zed2_factory_v2.yaml  T265.yaml  Zed2_640.yaml  see3cam.yaml
vslam/ORB_SLAM3_ROS/params/Monocular-Inertial/: D455_Color.txt  D455_Color.yaml  OpenLoris_D435i.yaml  Sber_zed2_factory_v2.yaml  see3cam_rs.yaml
vslam/ORB_SLAM3_ROS/params/Stereo/: D455.yaml  OpenLoris_T265.yaml
vslam/ORB_SLAM3_ROS/params/Stereo-Inertial/: OpenLoris.yaml  Zed2.yaml  Zed2_640.yaml
vslam/ORB_SLAM3_ROS/rviz/: rviz_vio.rviz  youbot_navigation.rviz
vslam/ORB_SLAM3_ROS/src/: node.cpp  ros_mono_inertial.cc  ros_stereo.cc  ros_stereo_inertial.cc
vslam/ORB_SLAM3_ROS/src/utils/: Utils.cpp
vslam2/: CMakeLists.txt  package.xml  vslam2.rosinstall
vslam2/ORB_SLAM3/: .gitignore  CMakeLists.txt
vslam2/ORB_SLAM3/include/: Converter.h  Frame.h  G2oTypes.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  MapDrawer.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  Settings.h  System.h  Tracking.h  Viewer.h
vslam2/ORB_SLAM3/include/CameraModels/: GeometricCamera.h
vslam2/ORB_SLAM3/src/: Frame.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MapDrawer.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc
vslam2/ORB_SLAM3_ROS/cmake/: FindDBoW2.cmake  Findg2o.cmake
vslam2/ORB_SLAM3_ROS/include/: node.h
vslam2/ORB_SLAM3_ROS/include/utils/: Utils.h
vslam2/ORB_SLAM3_ROS/launch/: depthPro.launch  octoMap.launch  run_rviz.launch  zed2_640.launch  zed2_stereo.launch  zed2_stereo_inertial.launch  zed2_stereo_offline.launch
vslam2/ORB_SLAM3_ROS/params/Stereo-Inertial/: Zed2_old.yaml  stereo_inertial_zed2.cpp
vslam2/ORB_SLAM3_ROS/params_old/Monocular/: D455.yaml  OpenLoris_D435i.yaml  Sber_zed2_factory_v2_1.yaml  Zed2_640_raw.yaml
vslam2/ORB_SLAM3_ROS/params_old/Monocular-Inertial/: D435i.yaml  T265.yaml
vslam2/ORB_SLAM3_ROS/params_old/RGB-D/: OpenLoris_D435i.yaml  Sber_zed2.yaml
vslam2/ORB_SLAM3_ROS/params_old/Stereo/: EuRoC.yaml  Zed2_640_raw.yaml
vslam2/ORB_SLAM3_ROS/params_old/Stereo-Inertial/: D455.yaml  OpenLoris_corridor2-4.yaml  T265.yaml  Zed2.yaml  Zed2_640_raw.yaml
vslam2/ORB_SLAM3_ROS/rviz/: orb_slam3_depth.rviz  rviz_vio.rviz
vslam2/ORB_SLAM3_ROS/src/: node.cpp  ros_mono.cc  ros_rgbd.cc  ros_stereo.cc  ros_stereo_inertial.cc  ros_stereo_inertial_new.cpp  ros_stereo_offline.cc
vslam2/ORB_SLAM3_ROS/src/utils/: Utils.cpp
youbot_description/: .gitignore  CMakeLists.txt  package.xml
youbot_description/controller/: ros_controller.urdf.xacro
youbot_description/robots/: youbot_base_only.urdf.xacro  youbot_dual_arm.urdf.xacro  youbot_with_cam3d.urdf.xacro
youbot_description/urdf/: common.xacro  materials.urdf.xacro
(+17 files in other folders)
