<?xml version="1.0"?>
<package>
  <name>vslam2</name>
  <version>0.0.0</version>
  <description>vslam2</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="h.vuong@itmo.ru">vuong</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sophus</build_depend>
  <build_depend>g2o</build_depend>
  <build_depend>DBoW2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sophus</run_depend>
  <run_depend>g2o</run_depend>
  <run_depend>DBoW2</run_depend>

  <export>
  </export>
</package>